# ai-proxy

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  config.example.yaml
.agents/skills/dashboard-control-plane/: SKILL.md
.claude/: settings.json
.claude/commands/: diagnose.md  doc-audit.md  implement.md  lint.md  pr.md  retro.md  review.md  ship.md  spec.md  test.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent_task.md  bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  claude.yml  e2e.yml  security.yml
crates/core/: Cargo.toml
crates/core/src/: audit.rs  auth_key.rs  cache.rs  (+19 more)
crates/provider/: Cargo.toml
crates/server/: Cargo.toml
crates/translator/: Cargo.toml
crates/types/: Cargo.toml
crates/types/src/: error.rs  format.rs  lib.rs
docs/: README.md
docs/playbooks/: add-provider.md  add-translator.md  coding-agent-workflow.md  create-new-spec.md  repo-layout-and-artifacts.md
docs/reference/: api-surface.md  architecture.md
docs/specs/: _index.md
src/: app.rs  cli.rs  main.rs
tests/e2e/: helpers.rs
tests/e2e-docker/: config.e2e.yaml
web/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web-v2/: README.md  index.html  package-lock.json  package.json
web-v2/src/: App.test.tsx
web/e2e/: dashboard.spec.ts  mock-codex-oauth.mjs  providers.mocked.spec.ts
web/scripts/: live-provider-matrix-check.mjs  real-flow-check.mjs
web/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx  styles.css
(+303 files in other folders)
