[package]
name = "prism-types"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, optional = true }
axum = { workspace = true, optional = true }

[features]
reqwest = ["dep:reqwest"]
axum = ["dep:axum"]
